2004-07-09(Fri) 07:45:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/drbot.nb : rename method name kick_* -> send/recv...


2004-07-09(Fri) 03:52:01 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/drbot.nb, plugins/drbcl.rb : added

	* plugins/mailcheck.nb, plugins/message.nb :added
	(contributed from Kazuhiro NISHIYAMA)


2004-07-09(Fri) 01:39:01 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb(client_notice) : added

	* ndk_manager.rb, ndk_client.rb : support '/nadoka status' command
	and add NDK_Manager#ndk_state, NDK_Bot#bot_state, NDK_Client#state

	* plugins/rss_check.nb(bot_state) : added


2004-07-08(Thu) 08:31:33 +0900  Koichi Sasada  <ko1@atdot.net>

	* tagparts.rb : add tree2string


2004-07-07(Wed) 17:53:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : fix socket bugs


2004-07-07(Wed) 17:15:07 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : add basic authentication, and some fixs

	* plugins/shellbot.nb, plugins/evalbot.nb : undo


2004-07-07(Wed) 16:04:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/shellbot.nb, plugins/evalbot.nb : fix bugs
	around constant search path

	* ndk_state.rb(channel_member_mode) : added

	* ndk_bot.rb : remove @raw_prefix


2004-07-07(Wed) 10:18:51 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : fix some issues


2004-07-06(Tue) 22:38:58 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : fix exception bug

	* ndk_manager.rb, ndk_config.rb : fix reload process

	* nadokarc : fix typo

	* plugins/weba.nb : fix some bugs, support writing

	* tagparts.rb : added(required by weba)


2004-07-05(Mon) 15:40:09 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : change default Channel_Info,
	:timing as :startup

	* ndk_manager.rb : fix nick change bugs

	* plugins/weba.nb : added(test version)


2004-07-05(Mon) 13:13:26 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : add execption hook(client thread)

